[package]
name = "inceptor"
version = "0.1.0"
authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
edition = "2018"
#categories = [""]
license = "MIT"
repository = "https://github.com/jeikabu/hookshot"
description = "fn inception() { inception() }"

[dependencies]
#windows_bindings = { version = "0.1", path = "../windows_bindings" }
